# coursera

./: alg4  corr.R  game-rpsls-v0.4.3.py
ALG/calg4/include/: calg4.h  str.h  uf.h
ALG/calg4/test/: test_uf.c
ALG4/calg4/: CMakeLists.txt
ALG4/calg4/include/: calg4.h  str.h  uf.h
ALG4/calg4/src/: qfuf.c  quuf.c  str.c  test.c  uf.c  wquuf.c
ALG4/calg4/test/: UF_test_result.txt  test_uf.c
ALG4/jalg4/: Percolation.java  PercolationStats.java
ALG4/jalg4/homework/: Percolation.java  PercolationStats.java
ALG4/jalg4/libsrc/: QuickFindUF.java  WeightedQuickUnionUF.java
ALG4/src/: test.c
R_DA/week-2/: complete.R  getmonitor.R
R_DA/week-3/: rankall.R  rankhospital.R
R_DA/week-4/: agecount.R  count.R
SM/week-1/: A.py  B.py  C1.py  C2.py
python/: Computers random probability.ppt  Using modular arithmetic to determine winner.ppt  miniproj-1-v0.4.5.ppt
week-3/: best.R  part1-4.R
